<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_header_authentication">

    <EditTextPreference
        android:inputType="text"
        android:key="device_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_device_id" />

    <EditTextPreference
        android:defaultValue="@string/email_address"
        android:inputType="textEmailAddress"
        android:key="email_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />

</PreferenceScreen>
