<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zombietank.bender.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/valveOneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/valve_one_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/valveOneGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/valveOneLabel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/valveOneSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="5"
            android:progress="0" />

        <ProgressBar
            android:id="@+id/valveOneProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/valve_one_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/valveTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/valveOneGroup"
        android:layout_marginTop="20dp"
        android:text="@string/valve_two_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/valveTwoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/valveTwoLabel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/valveTwoSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="5"
            android:progress="0" />

        <ProgressBar
            android:id="@+id/valveTwoProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/valve_two_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/valveThreeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/valveTwoGroup"
        android:layout_marginTop="20dp"
        android:text="@string/valve_three_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valveThreeLabel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/valveThreeSeekBar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="0"/>

        <ProgressBar
            android:id="@+id/valveThreeProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:max="100"
            android:progress="0"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/valve_three_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</RelativeLayout>
